# FlightsAbove

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  idf_component.yml  lv_conf.h  partitions.csv  sdkconfig.defaults
components/adsb/: CMakeLists.txt  aircraft.cpp  aircraft_store.cpp  readsb_json_parser.cpp  route_cache.cpp  sbs_parser.cpp
components/adsb/include/: aircraft.h  aircraft_store.h  readsb_json_parser.h  route_cache.h  sbs_parser.h
components/app_config/: CMakeLists.txt
components/app_config/include/: flights_config.h
components/device_network/: CMakeLists.txt  device_network.cpp
components/device_network/include/: device_network.h
components/platform/: CMakeLists.txt  Kconfig  platform_lilygo_t_display_s3.cpp  platform_round_360.cpp  platform_sensecap.cpp
components/platform/include/: platform.h
components/seeed_indicator/: CMakeLists.txt  Kconfig
components/seeed_indicator/bsp/include/: bsp_board.h  bsp_lcd.h
components/seeed_indicator/bsp/src/boards/: bsp_board.c  lcd_panel_config.c  sensecap_indicator_board.c
components/seeed_indicator/bsp/src/indev/: indev.c  indev_tp.c
components/seeed_indicator/bsp/src/peripherals/: bsp_lcd.c  lcd_panel_st7789.c  lcd_panel_st7796.c
components/seeed_indicator/i2c_devices/touch_panel/: ft5x06.c
components/setup_portal/: CMakeLists.txt  setup_portal.cpp
components/setup_portal/include/: setup_portal.h
components/storage/: CMakeLists.txt  storage.cpp
components/storage/include/: storage.h
components/ui_layout/: CMakeLists.txt  ui_layout.cpp
components/ui_layout/include/: ui_layout.h
docs/: HANDOFF.md  REUSE_FROM_ESPRESSO.md
main/: CMakeLists.txt  aircraft_icons.cpp  aircraft_icons.h  basemap_default.cpp  basemap_default.h  flights_config.h  idf_component.yml  logo_fallbacks.cpp  logo_fallbacks.h  main.cpp
tests/: adsb_parser_test.cpp
tools/: generate_basemap.py
