idf_component_register(
    SRCS
        "main.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        adsb
        app_config
        device_network
        esp_driver_uart
        esp_timer
        freertos
        log
        lvgl__lvgl
        nvs_flash
        platform
        storage
        ui_layout
)
