idf_component_register(
    SRCS
        "basemap_default.cpp"
        "aircraft_icons.cpp"
        "main.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        adsb
        app_config
        device_network
        esp_driver_uart
        esp_http_client
        esp_http_server
        esp-tls
        esp_timer
        freertos
        log
        lvgl__lvgl
        mbedtls
        nvs_flash
        platform
        spiffs
        storage
        ui_layout
)
